--- a/multiple_discount_sale_invoice/static/description/index.html
+++ b/multiple_discount_sale_invoice/static/description/index.html
@@ -3,7 +3,7 @@
         <h2 class="oe_slogan" style="color:#875A7B;">Multiple Discounts For Sale & Invoicing</h2>
     <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
-                <img src="QuotationForm2.png">
+                <img src="QuotationForm1.png">
             </div>
         </div>
     </div>
@@ -32,19 +32,20 @@
         <div class="oe_span12">
         	<h3 class = "text-center" style ="color : #525559 !important;">Discount Configuration</h3>
             <p class='text-justify' style ="font-size : 15px !important;">
-            1. Go to sale/invoicing menu, bellow Configuration you will find Discount Configuration menu.<br/>
+            <span class ="font-weight-bold" style = "color : #f05d7b !important;">Only user with access sales manager who can make discount configuration. </span><br/>
+            1. Go to sale menu, bellow Configuration you will find Discount Configuration menu.<br/>
             2. Create new discount configuration, create discount based on discount type (Fixed Amount / Percentage).<br/>
             3. Multiple Discount ready to use. 
             </p> 
     </div>
     <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
-                <img src="DiscountConfig2.png">
+                <img src="DiscountConfig1.png">
             </div>
         </div>
-    <div class="oe_span12">
+     <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
-                <img src="DiscountConfig3.png">
+                <img src="DiscForm1.png">
             </div>
         </div>
         </div>
@@ -65,15 +66,15 @@
     </div>
     <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
-                <img src="QuotationForm2.png">
+                <img src="QuotationForm1.png">
             </div>
         </div>
    <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
-                <img src="QuotationReport3.png">
+                <img src="QuotationReport1.png">
             </div>
         </div>
-        </div>
+        </div><br/>
 </section>
 
 <section class="oe_container">
@@ -84,18 +85,18 @@
         <div class="oe_span12">
         	<h3 class = "text-center" style ="color : #525559 !important;">Applying Multiple Discount On Customer Invoices</h3>
             <p class='text-justify' style ="font-size : 15px !important;">
-            1. Go to Invoicing menu and create new Customer invoices.<br/>
+            1. Go to Invoicing menu and create new invoices.<br/>
             2. Select Discount type, then select Discount amount.<br/>
             </p> 
     </div>
     <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
-                <img src="InvoiceForm2.png">
+                <img src="InvoiceForm1.png">
             </div>
         </div>
    <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
-                <img src="InvoiceReport3.png">
+                <img src="InvoiceReport1.png">
             </div>
         </div>
         </div>
