--- a/multiple_discount_sale_invoice/static/description/index.html
+++ b/multiple_discount_sale_invoice/static/description/index.html
@@ -33,7 +33,7 @@
         	<h3 class = "text-center" style ="color : #525559 !important;">Discount Configuration</h3>
             <p class='text-justify' style ="font-size : 15px !important;">
             <span class ="font-weight-bold" style = "color : #f05d7b !important;">Only user with access sales manager who can make discount configuration. </span><br/>
-            1. Go to sale/invoicing menu, bellow Configuration you will find Discount Configuration menu.<br/>
+            1. Go to sale menu, bellow Configuration you will find Discount Configuration menu.<br/>
             2. Create new discount configuration, create discount based on discount type (Fixed Amount / Percentage).<br/>
             3. Multiple Discount ready to use. 
             </p> 
