[adjust index.html]

--- a/multiple_discount_sale_invoice/static/description/index.html
+++ b/multiple_discount_sale_invoice/static/description/index.html
@@ -60,7 +60,7 @@
         <div class="oe_span12">
         	<h3 class = "text-center" style ="color : #525559 !important;">Applying Multiple Discount On Quotations</h3>
             <p class='text-justify' style ="font-size : 15px !important;">
-            1. Go to Sale menu and create new Quotations.<br/>
+            1. Go to Sales menu and create new Quotations.<br/>
             2. Select Discount type, then select Discount amount.<br/>
             </p> 
     </div>
