[change imgae invoice form1]

--- a/multiple_discount_sale_invoice/static/description/index.html
+++ b/multiple_discount_sale_invoice/static/description/index.html
@@ -96,7 +96,7 @@
         </div>
    <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
-                <img src="InvoiceReport1InvoiceForm1.png.png">
+                <img src="InvoiceReport1.png">
             </div>
         </div>
         </div>
