[report creator module]

--- a/customer_reviews/static/description/index.html
+++ b/customer_reviews/static/description/index.html
@@ -13,6 +13,7 @@
 	<div class="oe_row oe_spaced">
 		<div class="oe_span12">
 			<h2 class="text-center" style="color: #525559 !important;">Overview</h2>
+			<span class ="font-weight-bold" style = "color : #f05d7b !important;">To use this module, you need to install pdfkit "pip install pdfkit"</span><br/>
 			<p class='text-justify' style="font-size: 15px !important;">
 				Sometimes we need reviews about supplier from customer. This module is provided to costumer
 				to review about their supplier, giving comment and star ratings.  	
