--- a/report_creator/static/description/index.html
+++ b/report_creator/static/description/index.html
@@ -16,6 +16,7 @@
 	    </div>
         <div class="oe_span12">
         	<h2 class = "text-center" style ="color : #525559 !important;">Overview</h2>
+        	<span class ="font-weight-bold" style = "color : #f05d7b !important;">To use this module, you need to install pdfkit "pip install pdfkit"</span><br/>
             <p class='text-justify' style ="font-size : 15px !important;">
             Sometimes we need to generate report and we don't have time to code. With this module you
             can create a report any time, you only need a query to get the data. See demo video <u><a href="https://youtu.be/eE9j2Bk30II">here</a></u>
@@ -46,7 +47,8 @@
             <div class="oe_demo oe_picture oe_screenshot">
                 <img src="fileStore.png">
             </div>
-        </div>    
+        </div>   
+        </div> 
 </section>
 
 
@@ -65,10 +67,11 @@
             -Query : define a query to get the data, for example select * from res_users, when generate report you can use start date and end date as parameters, to do this 
             just put '%(start_date)s' , '%(end_date)s', for example full query :  select * from account_analytic_line  where date >= '%(start_date)s' and date <= '%(end_date)s'.            
             <br/>
+            2. After define a report you can test the query and see the data, just click button Test Query.
             </p> 
-            2. After define a report you can test the query and see the data, just click button Test Query 
+            
     </div>
-        </div>
+        
         <div>
         	    <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
@@ -84,6 +87,7 @@
             <div class="oe_demo oe_picture oe_screenshot">
                 <img src="queryTest.png">
             </div>
+        </div>
         </div>
         </div>
 </section>
